# c-vector-database

./: .gitignore  BUILD_ARTIFACTS.md  CHANGELOG.md  CROSS_PLATFORM.md  README.md  WORK_LOG.md  benchmark.c  generate_readme_image.py  generate_readme_image_v2.py  render_readme_full.py  test_glm5_windows.sh  test_ubuntu_build.sh
.github/workflows/: ci.yml  release.yml
glm5/: Makefile  glm5_vdb.c  glm5_vdb.h  test_glm5.c
kimi25/: Makefile  test_vector_db.c  vector_db.c  vector_db.h
minimax25/: Makefile  test_vdb.c  vdb.c  vdb.h
qwen35/: Makefile  README.md  qwen35_vdb.c  qwen35_vdb.h  simd_compat.h  test_qwen35  test_qwen35.c
rust-ds20code/: Cargo.toml
rust-ds20code/benches/: vector_db_bench.rs
rust-ds20code/src/: distance.rs  error.rs  hnsw.rs  lib.rs  vector_db.rs
rust-glm5/: Cargo.toml
rust-glm5/benches/: vector_db_bench.rs
rust-glm5/src/: distance.rs  error.rs  lib.rs  vector_db.rs
rust-kimi25/: Cargo.toml  PERSISTENCE_SUMMARY.md
rust-kimi25/benches/: persistence_bench.rs  vector_db_bench.rs
rust-kimi25/src/: distance.rs  error.rs  hnsw.rs  lib.rs  persistence.rs  vector_db.rs
rust-minimax25/: Cargo.toml
rust-minimax25/benches/: vector_db_bench.rs
rust-minimax25/examples/: persist_test.rs
rust-minimax25/src/: distance.rs  error.rs  lib.rs  vector_db.rs
rust-qwen35/: Cargo.toml  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERSISTENCE.md  PERSISTENCE_SUMMARY.md  README.md  verify_optimization.sh  verify_persistence.sh
rust-qwen35/benches/: vector_db_bench.rs
rust-qwen35/examples/: optimized_persistence.rs  perf_test.rs  persistence_test.rs
rust-qwen35/src/: distance.rs  error.rs  lib.rs  vector_db.rs  vector_db_optimized.rs
