[package]
name = "rust-ds20code"
version = "0.1.0"
edition = "2021"
authors = ["Vector Database Team"]
description = "Ultra high-performance vector database with SIMD, HNSW and parallel processing"
license = "MIT"
keywords = ["vector", "database", "simd", "hnsw", "search"]
categories = ["database", "science"]

[dependencies]
rayon = "1.10"
parking_lot = "0.12"
dashmap = "5.5"
smallvec = "1.13"
rand = "0.8"
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["simd"]
simd = []

[[bench]]
name = "vector_db_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"

[profile.bench]
opt-level = 3
lto = "fat"
