[package]
name = "rust-glm5"
version = "0.1.0"
edition = "2021"
authors = ["Vector Database Team"]
description = "High-performance vector database with SIMD optimization"
license = "MIT"
keywords = ["vector", "database", "simd", "search"]
categories = ["database", "science"]

[dependencies]
rayon = "1.10"
parking_lot = "0.12"
dashmap = "5.5"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"
lz4_flex = { version = "0.11", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = ["simd"]
simd = []
compression = ["lz4_flex"]

[[bench]]
name = "vector_db_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"

[profile.bench]
opt-level = 3
lto = true
