[package]
name = "rust-minimax25"
version = "0.1.0"
edition = "2021"
authors = ["Vector Database Team"]
description = "High-performance vector database for Minimax25 with SIMD optimization"
license = "MIT"
keywords = ["vector", "database", "simd", "search", "minimax"]
categories = ["database", "science"]

[dependencies]
rayon = "1.10"
parking_lot = "0.12"
dashmap = "5.5"
smallvec = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
default = ["simd"]
simd = []

[[bench]]
name = "vector_db_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"

[profile.bench]
opt-level = 3
lto = true
