[package]
name = "rust-qwen35"
version = "0.1.0"
edition = "2021"
authors = ["Vector Database Team"]
description = "High-performance vector database with SIMD optimization and advanced indexing"
license = "MIT"
keywords = ["vector", "database", "simd", "search", "qwen"]
categories = ["database", "science"]

[dependencies]
rayon = "1.10"
parking_lot = "0.12"
dashmap = "5.5"
smallvec = "1.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["simd"]
simd = []

[[bench]]
name = "vector_db_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
